# sera

./: .claudeignore  .env.example  .gitattributes  .gitignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  GEMINI.md  LICENSE  Makefile  README.md  SECURITY.md  SECURITY_AUDIT_AGENT_RUNTIME.md  SECURITY_AUDIT_GITHUB_ISSUES_TEMPLATE.md  SECURITY_AUDIT_SUMMARY.txt  SESSION-REPORT.md  audit_report.txt  basic instructions.md  check_all_output.txt  core_logs.txt  deploy-discord.sh  dmfvvdrlcjttotfqiadeak6mpjbi7lbp  docker-compose.auth.yaml  docker-compose.dev.yaml  docker-compose.rust.yaml  docker-compose.test.yaml  docker-compose.yaml  fix_circular.py  fix_tests.py  kmjtbceb9cq9ofsc1mombgn6arbdodfj.darc  manifest  mkdocs.yml  open_prs.json  package-lock.json  package.json  patch.diff  patch_insights.cjs  patch_insights.js  patch_insights2.cjs  pr_20.txt  (+14 more)
legacy/tui/: CLAUDE.md  Cargo.toml
legacy/tui/src/: api.rs  main.rs  models.rs  ui.rs
rust/: CLAUDE.md  Cargo.toml  DECOMMISSION-PLAN.md  Dockerfile  Dockerfile.byoh-agent  Dockerfile.sera  Dockerfile.sera.dockerignore  MIGRATION-PLAN.md  build.sh  docker-compose.sera.yml  sera.yaml.example
rust/.cargo/: config.toml
rust/contracts/: db-ownership.md  queues.md  routes.md
rust/contracts/manifests/: byoh-rust-example.template.yaml  example-full.template.yaml
rust/crates/sera-a2a/: Cargo.toml
rust/crates/sera-a2a/src/: lib.rs
rust/crates/sera-agui/: Cargo.toml
rust/crates/sera-agui/src/: lib.rs
rust/crates/sera-auth/: Cargo.toml
rust/crates/sera-auth/src/: api_key.rs  authz.rs  capability.rs  casbin_adapter.rs  error.rs  jwt.rs  lib.rs  middleware.rs  types.rs
rust/crates/sera-auth/tests/: auth_tests.rs
rust/crates/sera-byoh-agent/: Cargo.toml
rust/crates/sera-byoh-agent/src/: health.rs  heartbeat.rs  llm.rs  main.rs
rust/crates/sera-cache/: Cargo.toml
rust/crates/sera-cache/src/: lib.rs
rust/crates/sera-cli/: Cargo.toml
rust/crates/sera-cli/src/: config.rs  http.rs  lib.rs  main.rs  sse.rs  token_store.rs
rust/crates/sera-cli/tests/: agent_test.rs  auth_test.rs  chat_smoke.rs  ping_test.rs
rust/crates/sera-commands/: Cargo.toml
rust/crates/sera-commands/src/: lib.rs  registry.rs  traits.rs
rust/crates/sera-commands/tests/: registry_tests.rs
rust/crates/sera-config/: Cargo.toml
rust/crates/sera-config/src/: config_store.rs  core_config.rs  data_root.rs  env_override.rs  layer_merge.rs  lib.rs  manifest_loader.rs  providers.rs  schema_registry.rs  secrets.rs  sera_errors.rs  shadow_store.rs  version_log.rs  watchers.rs
rust/crates/sera-config/tests/: hot_reload.rs  test_env_override.rs  test_layer_merge.rs  test_schema_registry.rs  test_shadow_store.rs  test_version_log.rs
rust/crates/sera-core/: Cargo.toml
rust/crates/sera-core/src/: discord.rs  error.rs  main.rs  state.rs
rust/crates/sera-core/tests/: handler_tests.rs  integration_tests.rs
rust/crates/sera-db/: Cargo.toml
rust/crates/sera-db/migrations/: 0001_circle_constitution_versions.sql
rust/crates/sera-db/src/: agents.rs  api_keys.rs  audit.rs  circles.rs  delegations.rs  error.rs  job_queue.rs  lane_queue.rs  lane_queue_counter.rs  lib.rs  memory.rs  metering.rs  notifications.rs  operator_requests.rs  pgvector_store.rs  pool.rs  proposal_usage.rs  schedules.rs  secrets.rs  sessions.rs  signals.rs  skills.rs  sqlite.rs  sqlite_memory_store.rs  sqlite_schema.rs  tasks.rs  training_exports.rs  webhooks.rs
rust/crates/sera-db/tests/: integration.rs
rust/crates/sera-docker/: Cargo.toml
rust/crates/sera-docker/src/: container.rs  error.rs  events.rs  lib.rs
rust/crates/sera-domain/: Cargo.toml
rust/crates/sera-domain/src/: audit.rs  capability.rs  chat.rs  config_manifest.rs  connector.rs  event.rs  hook.rs  lib.rs  manifest.rs  memory.rs  metering.rs  observability.rs  policy.rs  principal.rs  queue.rs  sandbox.rs  secrets.rs  session.rs  skill.rs  tool.rs
rust/crates/sera-domain/tests/: golden_manifests.rs
rust/crates/sera-e2e-harness/: Cargo.toml
rust/crates/sera-e2e-harness/src/: binaries.rs  lib.rs  mock_llm.rs
rust/crates/sera-e2e-harness/tests/: local_profile_turn.rs  scenarios_s1_bootstrap.rs  scenarios_s2_config.rs  scenarios_s3_single_agent.rs  scenarios_s4_policy.rs  scenarios_s5_hitl.rs  scenarios_s7_workflow.rs
rust/crates/sera-errors/: Cargo.toml
rust/crates/sera-errors/src/: lib.rs
rust/crates/sera-eval/: Cargo.toml
rust/crates/sera-eval/src/: error.rs  lib.rs  runner.rs  store.rs  suite.rs  task_def.rs
rust/crates/sera-eval/tasks/: sera-internal-0001-memory-language-preference.yaml  sera-internal-0002-tool-use-grep.yaml  sera-internal-0003-skill-auto-invocation.yaml  sera-internal-0004-hitl-approval.yaml  (+6 more)
rust/crates/sera-events/: Cargo.toml
rust/crates/sera-gateway/: CHAT_HARNESS.md  Cargo.toml
rust/crates/sera-hitl/: Cargo.toml
rust/crates/sera-hooks/: Cargo.toml
rust/crates/sera-mail/: Cargo.toml
rust/crates/sera-mcp/: Cargo.toml
rust/crates/sera-memory/: Cargo.toml
rust/crates/sera-memory-hindsight/: Cargo.toml
rust/crates/sera-meta/: Cargo.toml
rust/crates/sera-models/: Cargo.toml
rust/crates/sera-oci/: Cargo.toml
rust/crates/sera-plugins/: Cargo.toml
rust/crates/sera-queue/: Cargo.toml
rust/crates/sera-runtime/: CLAUDE.md  Cargo.toml
rust/crates/sera-secrets/: Cargo.toml
rust/crates/sera-session/: Cargo.toml
rust/crates/sera-skills/: Cargo.toml
rust/crates/sera-telemetry/: Cargo.toml
rust/crates/sera-testing/: Cargo.toml
rust/crates/sera-tools/: Cargo.toml
rust/crates/sera-tui/: Cargo.toml  README.md
rust/crates/sera-types/: Cargo.toml
rust/crates/sera-workflow/: Cargo.toml
rust/docs/plan/: HYBRID-RETRIEVAL.md
rust/proto/plugin/: auth_provider.proto  auth_provider.schema.json  context_engine.proto  context_engine.schema.json  memory_backend.proto  memory_backend.schema.json  registry.proto  registry.schema.json  sandbox_provider.proto  sandbox_provider.schema.json  secret_provider.proto  secret_provider.schema.json  tool_executor.proto  tool_executor.schema.json
rust/proxy/: docker-compose.proxy.yaml  nginx.conf
(+2048 files in other folders)
