[workspace]
resolver = "2"
members = [
  "crates/sera-types",
  "crates/sera-config",
  "crates/sera-db",
  "crates/sera-auth",
  "crates/sera-events",
  "crates/sera-docker",
  "crates/sera-tools",
  "crates/sera-testing",
  "crates/sera-gateway",
  "crates/sera-runtime",
  "crates/sera-tui",
  "crates/sera-byoh-agent",
  "crates/sera-hitl",
  "crates/sera-hooks",
  "crates/sera-workflow",
  "crates/sera-telemetry",
  "crates/sera-queue",
  "crates/sera-errors",
  "crates/sera-cache",
  "crates/sera-secrets",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"

[workspace.dependencies]
# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"

# Async runtime
tokio = { version = "1", features = ["full"] }

# HTTP
axum = "0.8"
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }

# Database
sqlx = { version = "0.8", features = ["runtime-tokio", "tls-rustls", "postgres", "sqlite", "json", "time", "uuid"] }
rusqlite = { version = "0.32", features = ["bundled"] }

# Auth
jsonwebtoken = "9"

# Docker
bollard = "0.18"

# Observability
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
thiserror = "2"
anyhow = "1"

# Testing
insta = { version = "1", features = ["yaml"] }
tempfile = "3"

# Crypto
sha2 = "0.10"
aes-gcm = "0.10"
hex = "0.4"
base64 = "0.22"
urlencoding = "2"
zeroize = { version = "1", features = ["derive"] }
argon2 = "0.5"
casbin = "2"

# WebSocket
tokio-tungstenite = { version = "0.26", features = ["connect", "rustls-tls-webpki-roots"] }

# Streaming
tokio-stream = "0.1"
async-stream = "0.3"
futures-util = "0.3"
tokio-util = "0.7"

# Knowledge / Vector
qdrant-client = "1"
git2 = "0.19"

# OIDC
openidconnect = "4"

# TUI
ratatui = "0.29"
crossterm = "0.28"

# Utilities
uuid = { version = "1", features = ["v4", "serde"] }
time = { version = "0.3", features = ["serde"] }
rand = "0.8"
regex = "1"

# File watching
notify = "7"
notify-debouncer-mini = "0.5"

# Scheduling
cron = "0.13"
chrono = { version = "0.4", features = ["serde"] }

# CLI
clap = { version = "4", features = ["derive"] }

# Async trait support
async-trait = "0.1"

# OTel triad — EXACT version pins are load-bearing.
# These three crates must move together; drift produces compile-time trait-bound errors.
# See SPEC-dependencies §8.4 and HANDOFF §6.2 before changing any of these pins.
opentelemetry        = { version = "=0.27", features = ["trace"] }   # EXACT — load-bearing triad
opentelemetry-otlp   = "=0.27"   # EXACT
tracing-opentelemetry = "=0.28"  # EXACT

once_cell = "1"
figment    = { version = "0.10", features = ["env", "toml"] }
schemars   = { version = "1", features = ["derive"] }
jsonschema = { version = "0.46", default-features = false }

# Workspace crates
sera-types = { path = "crates/sera-types" }
sera-telemetry = { path = "crates/sera-telemetry" }
sera-config = { path = "crates/sera-config" }
sera-db = { path = "crates/sera-db" }
sera-auth = { path = "crates/sera-auth" }
sera-events = { path = "crates/sera-events" }
sera-docker = { path = "crates/sera-docker" }
sera-tools = { path = "crates/sera-tools" }
sera-runtime = { path = "crates/sera-runtime" }
sera-testing = { path = "crates/sera-testing" }
sera-hitl = { path = "crates/sera-hitl" }
sera-hooks = { path = "crates/sera-hooks" }
sera-workflow = { path = "crates/sera-workflow" }
sera-queue = { path = "crates/sera-queue" }
sera-errors = { path = "crates/sera-errors" }
sera-cache = { path = "crates/sera-cache" }
sera-secrets = { path = "crates/sera-secrets" }

[profile.release]
lto = true
codegen-units = 1
strip = true
