[package]
name = "sera-tui"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "sera-tui"
path = "src/main.rs"

[dependencies]
ratatui = "0.29"
crossterm = "0.28"
ureq = { version = "2", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tungstenite = { version = "0.29", features = ["rustls-tls-native-roots"] }
clap = { version = "4", features = ["derive"] }
