[package]
name = "sera-agui"
version.workspace = true
edition.workspace = true

[dependencies]
sera-errors = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
