[package]
name = "sera-byoh-agent"
version.workspace = true
edition.workspace = true

[dependencies]
sera-domain.workspace = true
sera-config.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
reqwest.workspace = true
axum.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
