[package]
name = "sera-cache"
version.workspace = true
edition = "2024"

[dependencies]
sera-errors = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
moka = { version = "0.12", features = ["future"] }
