[package]
name = "sera-cli"
version.workspace = true
edition.workspace = true
description = "SERA command-line interface"

[[bin]]
name = "sera"
path = "src/main.rs"

[dependencies]
sera-commands = { workspace = true }
anyhow = { workspace = true }
clap = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
reqwest = { workspace = true }
dirs = { workspace = true }
async-trait = { workspace = true }
keyring = { workspace = true }
rpassword = { workspace = true }
comfy-table = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
wiremock = { workspace = true }
tempfile = { workspace = true }
