[package]
name = "sera-cli"
version.workspace = true
edition.workspace = true
description = "SERA command-line interface"

[[bin]]
name = "sera"
path = "src/main.rs"

[dependencies]
sera-commands = { workspace = true }
anyhow = { workspace = true }
clap = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
reqwest = { workspace = true }
dirs = { workspace = true }
async-trait = { workspace = true }
keyring = { workspace = true }
rpassword = { workspace = true }
comfy-table = { workspace = true }
bytes = "1"
futures-util = { workspace = true }
async-stream = { workspace = true }
tokio-stream = { workspace = true }

[features]
# Enables the chat_smoke integration test which boots a real gateway via
# sera-e2e-harness and runs the `sera chat` REPL as a subprocess.
integration = []

[dev-dependencies]
tokio = { workspace = true }
wiremock = { workspace = true }
tempfile = { workspace = true }
