[package]
name = "sera-config"
version.workspace = true
edition.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
thiserror.workspace = true
tokio.workspace = true
notify.workspace = true
notify-debouncer-mini.workspace = true
tracing.workspace = true
sera-types.workspace = true
sera-errors.workspace = true
sha2.workspace = true
async-trait.workspace = true
once_cell.workspace = true
figment.workspace = true
schemars.workspace = true
jsonschema.workspace = true
hex.workspace = true
dirs.workspace = true

[dev-dependencies]
tempfile.workspace = true
tokio = { workspace = true, features = ["macros"] }

[features]
default = []
schema-validation = []
