[package]
name = "sera-core"
version.workspace = true
edition.workspace = true

[[bin]]
name = "sera-core"
path = "src/main.rs"

[dependencies]
sera-domain.workspace = true
sera-db.workspace = true
sera-auth.workspace = true
sera-events.workspace = true
sera-docker.workspace = true
sera-config.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
tokio.workspace = true
axum.workspace = true
tower.workspace = true
tower-http.workspace = true
reqwest.workspace = true
sqlx.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
thiserror.workspace = true
anyhow.workspace = true
uuid.workspace = true
time.workspace = true
jsonwebtoken.workspace = true
sha2.workspace = true
hex.workspace = true
base64.workspace = true
urlencoding.workspace = true

tokio-stream.workspace = true
tokio-util.workspace = true
async-stream.workspace = true
futures-util.workspace = true
# qdrant-client and git2 deferred — native deps need Docker build env
# openidconnect deferred — uses reqwest directly for token exchange
rand.workspace = true
cron.workspace = true
chrono.workspace = true

[dev-dependencies]
sera-testing.workspace = true
insta.workspace = true
tempfile.workspace = true
