[package]
name = "sera-db"
version.workspace = true
edition.workspace = true

[dependencies]
sera-domain.workspace = true
sqlx.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
thiserror.workspace = true
uuid.workspace = true
time.workspace = true
aes-gcm.workspace = true
sha2.workspace = true
hex.workspace = true
