[package]
name = "sera-db"
version.workspace = true
edition.workspace = true

[features]
integration = []

[dependencies]
sera-types.workspace = true
sera-errors.workspace = true
rusqlite.workspace = true
sqlx.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
thiserror.workspace = true
uuid.workspace = true
time.workspace = true
aes-gcm.workspace = true
sha2.workspace = true
hex.workspace = true
zeroize.workspace = true
rand.workspace = true
chrono.workspace = true
async-trait.workspace = true

[dev-dependencies]
tokio = { workspace = true }
uuid = { workspace = true }
