[package]
name = "sera-db"
version.workspace = true
edition.workspace = true

[features]
default = ["sqlite-vec"]
integration = []
sqlite-vec = ["dep:sqlite-vec"]

[dependencies]
sera-memory = { workspace = true, features = ["pgvector", "sqlite", "sqlite-vec"] }
sera-types.workspace = true
sera-errors.workspace = true
rusqlite.workspace = true
sqlx.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
thiserror.workspace = true
uuid.workspace = true
time.workspace = true
aes-gcm.workspace = true
sha2.workspace = true
hex.workspace = true
zeroize.workspace = true
rand.workspace = true
chrono.workspace = true
async-trait.workspace = true
pgvector = { version = "0.4", features = ["sqlx"] }
sqlite-vec = { version = "0.1", optional = true }

[dev-dependencies]
tokio = { workspace = true }
uuid = { workspace = true }
tempfile = { workspace = true }
