[package]
name = "sera-docker"
version.workspace = true
edition.workspace = true

[dependencies]
sera-domain.workspace = true
sera-events.workspace = true
bollard.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
thiserror.workspace = true
uuid.workspace = true
