[package]
name = "sera-eval"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "SERA 2.0 evaluation harness — task definitions, benchmark adapters, and SQLite results store."

[features]
default = []
# External benchmark adapters (SWE-Bench Lite, TAU-bench) land behind this
# feature in later PRs so the default build stays hermetic and offline.
external-suites = []

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
thiserror = { workspace = true }
rusqlite = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
