[package]
name = "sera-events"
version.workspace = true
edition.workspace = true

[dependencies]
sera-domain.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
thiserror.workspace = true
uuid.workspace = true
time.workspace = true
reqwest.workspace = true
