[package]
name = "sera-events"
version.workspace = true
edition.workspace = true

[dependencies]
sera-types.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
thiserror.workspace = true
uuid.workspace = true
time.workspace = true
reqwest.workspace = true
jsonwebtoken.workspace = true
sha2 = "0.10"
