[package]
name = "sera-hitl"
version.workspace = true
edition.workspace = true
description = "Human-in-the-Loop / Agent-in-the-Loop approval system for SERA"

[dependencies]
sera-types.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
tokio.workspace = true
uuid.workspace = true
chrono.workspace = true

[dev-dependencies]
