[package]
name = "sera-hooks"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "In-process hook registry and chain executor for SERA"

[dependencies]
sera-types = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
async-trait = { workspace = true }
wasmtime = { workspace = true, optional = true }
wasmtime-wasi = { workspace = true, optional = true }

[features]
default = []
wasm = ["wasmtime", "wasmtime-wasi"]

[dev-dependencies]
tokio = { workspace = true, features = ["full"] }
