[package]
name = "sera-mail"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Mail gate correlator: maps inbound email replies back to SERA workflow Mail gates via RFC 5322 headers + SERA-issued nonce fallback"

[dependencies]
sera-types = { path = "../sera-types" }
sera-workflow = { path = "../sera-workflow" }
sera-errors = { path = "../sera-errors" }
mailparse = "0.15"
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true, features = ["v4"] }
regex = { workspace = true }
base64 = { workspace = true }
rand = { workspace = true }

[dev-dependencies]
sera-testing = { path = "../sera-testing" }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
uuid = { workspace = true, features = ["v4"] }
