[package]
name = "sera-mcp"
version.workspace = true
edition.workspace = true

[dependencies]
sera-types = { workspace = true }
sera-errors = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
serde_yaml = { workspace = true }
