[package]
name = "sera-mcp"
version.workspace = true
edition.workspace = true

[features]
default = []
# Enable the concrete `RmcpClientBridge` backed by the Anthropic `rmcp` SDK.
# Operators opt in; the crate compiles without it for consumers that only
# need trait definitions and config types.
rmcp-client = ["dep:rmcp"]
# Gate integration tests that spawn real external MCP servers.
rmcp-integration = ["rmcp-client"]

[dependencies]
sera-types = { workspace = true }
sera-errors = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
rmcp = { workspace = true, optional = true }

[dev-dependencies]
serde_yaml = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
