[package]
name = "sera-meta"
version.workspace = true
edition.workspace = true
description = "Self-evolution machinery: constitutional rule registry, shadow sessions, Tier 1/2/3 evolution policies"
license.workspace = true

[dependencies]
sera-types = { workspace = true }
sera-auth = { workspace = true }
sera-events = { workspace = true }
sera-errors = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
chrono = { workspace = true }
tokio = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
async-trait = { workspace = true }
rand = { workspace = true }
