[package]
name = "sera-models"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Model provider abstractions for SERA — separates LLM client from specific providers"

[dependencies]
sera-errors = { workspace = true }
sera-types = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true }
reqwest = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["full"] }
